--- a/app/src/main/res/layout/activity_login_form.xml
+++ b/app/src/main/res/layout/activity_login_form.xml
@@ -20,8 +20,7 @@
             <ImageView
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/icon_dhspkt"
-                android:layout_marginLeft="13dp"/>
+                android:src="@drawable/icon_dhspkt" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -59,13 +58,14 @@
             android:layout_height="wrap_content"
             android:text="ĐĂNG NHẬP"
             android:layout_gravity="center"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="70dp"
             android:textSize="30dp"
             android:fontFamily="sans-serif-medium"
             android:textColor="#0652DD"
             android:layout_marginBottom="5dp"/>
 
         <EditText
+            android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
@@ -80,6 +80,7 @@
             android:drawableLeft="@drawable/ic_user" />
 
         <EditText
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
@@ -118,9 +119,9 @@
         </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnLogin"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/password"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
