--- a/app/src/main/res/layout/activity_login_form.xml
+++ b/app/src/main/res/layout/activity_login_form.xml
@@ -32,7 +32,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="ĐẠI HỌC ĐÀ NẴNG"
-                    android:fontFamily="sans-serif"
+                    android:fontFamily="@font/product_sans_regular"
                     android:textSize="17.4dp"
                     android:textColor="#0652DD"/>
 
@@ -40,14 +40,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="TRƯỜNG ĐẠI HỌC SƯ PHẠM KỸ THUẬT"
-                    android:fontFamily="sans-serif-medium"
+                    android:fontFamily="@font/product_sans_bold"
                     android:textSize="17.3dp"
                     android:textColor="#0652DD"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="University of Technology and Education"
-                    android:fontFamily="sans-serif-light"
+                    android:fontFamily="@font/product_sans_regular"
                     android:textSize="17.3dp"
                     android:textColor="#EE5A24"/>
             </LinearLayout>
@@ -60,7 +60,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="70dp"
             android:textSize="30dp"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="@font/product_sans_bold"
             android:textColor="#0652DD"
             android:layout_marginBottom="5dp"/>
 
@@ -77,7 +77,9 @@
             android:hint="Tài khoản"
             android:padding="15dp"
             android:textColor="@color/black"
-            android:drawableLeft="@drawable/ic_user" />
+            android:drawableLeft="@drawable/ic_user"
+            android:singleLine="true"
+            android:fontFamily="@font/product_sans_regular"/>
 
         <EditText
             android:id="@+id/password"
@@ -93,7 +95,9 @@
             android:inputType="textPassword"
             android:padding="15dp"
             android:textColor="@color/black"
-            android:drawableLeft="@drawable/ic_password"/>
+            android:drawableLeft="@drawable/ic_password"
+            android:singleLine="true"
+            android:fontFamily="@font/product_sans_regular"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -107,15 +111,17 @@
                 android:textColor="@color/black"
                 android:textSize="15dp"
                 android:layout_marginStart="30dp"
-                android:textColorHint="@color/black"/>
+                android:textColorHint="@color/black"
+                android:fontFamily="@font/product_sans_regular"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Quên mật khẩu?"
-                android:textSize="18dp"
+                android:textSize="17dp"
                 android:layout_marginLeft="90dp"
-                android:textColor="@color/black"/>
+                android:textColor="#d63031"
+                android:fontFamily="@font/product_sans_regular" />
         </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
@@ -133,7 +139,7 @@
             android:paddingRight="30dp"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="@font/product_sans_regular"
             android:layout_gravity="center"/>
 
     </LinearLayout>
