--- a/app/src/main/res/layout/waiting_form.xml
+++ b/app/src/main/res/layout/waiting_form.xml
@@ -22,7 +22,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HỘI PHÍ"
+        android:text="HỘI PHÍ "
         android:layout_gravity="center"
         android:textSize="35dp"
         android:fontFamily="sans-serif-medium"
@@ -36,7 +36,7 @@
         android:text="Nhóm 7"
         android:layout_gravity="center"
         android:textSize="23dp"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/product_sans_bold"
         android:textColor="#d63031"
         android:layout_marginBottom="5dp"/>
 
