--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -73,7 +74,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="20dp"
             android:backgroundTint="#0652DD"
             android:text="Thêm sinh viên"
@@ -84,12 +85,9 @@
             android:fontFamily="@font/product_sans_regular"
             android:layout_gravity="center" />
 
-        <ScrollView
+        <ListView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-        </ScrollView>
-
+            android:layout_height="match_parent"
+            android:id="@+id/listviewSinhVien"/>
     </LinearLayout>
-</ScrollView>
+</LinearLayout>
