--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,6 +88,6 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/listviewSinhVien"/>
+            android:id="@+id/listviewSV"/>
     </LinearLayout>
 </LinearLayout>
