--- a/app/src/main/res/layout/activity_list_main.xml
+++ b/app/src/main/res/layout/activity_list_main.xml
@@ -9,18 +9,27 @@
 
 
     <RadioGroup
+        android:id="@+id/rb_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <RadioButton
+            android:id="@+id/rb_hello"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello"/>
         <RadioButton
+            android:id="@+id/rb_hi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hi"/>
     </RadioGroup>
+
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="skskfk"/>
 
 </LinearLayout>
