--- a/app/src/main/res/layout/dialog_xoa.xml
+++ b/app/src/main/res/layout/dialog_xoa.xml
@@ -3,9 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minWidth="360dp"
-    android:minHeight="220dp"
-    android:orientation="vertical"
-    android:padding="30dp">
+    android:minHeight="210dp"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -20,6 +19,7 @@
         android:textColor="@color/white"/>
 
     <TextView
+        android:id="@+id/tvDelete"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:text="Xóa sinh viên"
@@ -27,7 +27,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:fontFamily="@font/product_sans_regular"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textColor="@color/black"/>
 
     <LinearLayout
         android:layout_width="match_parent"
