--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
             android:layout_marginTop="5dp"
             android:paddingLeft="5dp">
             <EditText
+                android:id="@+id/edtSearch"
                 android:textSize="18dp"
                 android:fontFamily="@font/product_sans_regular"
                 android:layout_width="280dp"
@@ -58,6 +59,7 @@
                 android:textColor="@color/black"/>
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnSearch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tìm"
